# cloude-native-agentic-ai

./: README.md  database.py  docker-compose.yaml  models.py
Task-Management-API/.claude/: settings.local.json
Task-Management-API/claude-code-skills-lab/: tmpclaude-26cf-cwd
Task-Management-API/claude-code-skills-lab/claude-code-skills-lab/.claude/skills/fastapi-guide/: SKILL.md
Task-Management-API/claude-code-skills-lab/claude-code-skills-lab/.claude/skills/pytest/: SKILL.md
Task-Management-API/claude-code-skills-lab/claude-code-skills-lab/.claude/skills/sqlmodel/: SKILL.md
Task-Management-API/todo-management-api/: .dockerignore  .env.docker  .env.example  .gitignore  AUTH_GUIDE.md  DOCKER_README.md  Dockerfile  NEONDB_SETUP.md  QUICKSTART.md  README.md  hello.py  main.py  models.py  pyproject.toml  pytest.ini  routes.py  test_auth.py
Task-Management-API/todo-management-api/auth/: config.py  schemas.py  security.py
Task-Management-API/todo-management-api/tests/: __init__.py  conftest.py  test_todos.py
auth/: dependencies.py  router.py
hello-fastapi/: pytest.skill
hello-fastapi/claude-code-skills-lab/: fastapi-guide.skill
hello-fastapi/claude-code-skills-lab/.claude/: settings.local.json
hello-fastapi/claude-code-skills-lab/.claude/skills/fastapi-guide/: SKILL.md  package.py
hello-fastapi/claude-code-skills-lab/.claude/skills/pytest/: SKILL.md
hello-fastapi/hello-fastapi/: .coverage  main.py  pyproject.toml  pytest.ini  test_main.py
k8s/: DEPLOYMENT.md  deployment.yaml  kustomization.yaml  postgres-deployment.yaml  secrets.yaml  service.yaml
(+36 files in other folders)
